styles.css
body {
    display: flex;
    flex-direction: column;
    background-color: rgb(59, 59, 59);
    align-items: center;
}

main {
    display: flex;
}

.grid {
    width: 50vw;
    aspect-ratio: 1 / 1;
    height: auto;
}

.square {
    width: 6.25%;
    aspect-ratio: 1 / 1;;
    background-color: rgb(102, 126, 88);
    margin: 0;
}

.grid-row {
    width: 100%;
    display: flex;
}

